fixed image sizing to scale on mobile

--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 25%;
+  max-width: 100%;
+  height: auto;
 }
 
 figcaption {
